@@ -71,6 +71,7 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::Git::Push = 0
+Dist::Zilla::Plugin::GitHub::Update = 0
 Dist::Zilla::Plugin::InstallRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Pod::Weaver::PluginBundle::Default = 0
