@@ -11,6 +11,9 @@ Revision history for {{$dist->name}}
             injected as a develop prerequisite for users of the plugin bundle
           - the version of this bundle used to mint a dist is set as the
             minimum version for subsequent builds of the dist
+          - after release, the github repository is updated with the
+            distribution's abstract as its description, and the metacpan page
+            as its homepage.
 
 0.005     2013-04-28 08:47:40 PDT-0700 (Karen Etheridge)
           - bump version for [Test::Compile] and [Test::CheckDeps] (RT#84900,
